tests/fixtures/valid/multi/alias_conflict/main.gcl
include lib.a().{ x as x_a };
include lib.b().{ x as x_b };

node sum: Dimensionless = @x_a + @x_b;
