tests/fixtures/invalid/multi/circular_a.gcl
include circular_b().{ y };
param x: Dimensionless = 1.0;
